--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.15",
     "next-auth": "^4.24.10",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
